Fix waveform scale, enable gapless bars

--- a/assets/styles/components/WaveForm.scss
+++ b/assets/styles/components/WaveForm.scss
@@ -1,7 +1,5 @@
 @import '../abstracts/variables.scss';
 
 #WaveForm {
-  width: 835px;
-  height: 200px;
   background-color: $color-blue-darker;
 }
